--- a/hons/docs/biblio.bib
+++ b/hons/docs/biblio.bib
@@ -153,7 +153,7 @@
  address = {Washington, DC, USA},
 }
 
-@article{Lit07,
+@article{lit07,
 title = "Efficient task replication and management for adaptive fault tolerance in Mobile Grid environments",
 journal = "Future Generation Computer Systems",
 volume = "23",
@@ -288,6 +288,17 @@ keywords = "Adaptive software"
  acmid = {1884650},
  publisher = {IEEE Computer Society},
  address = {Washington, DC, USA},
+}
+
+%costs simplification
+@article{sto77,
+  title={Multiprocessor scheduling with the aid of network flow algorithms},
+  author={Stone, H.S.},
+  journal={Software Engineering, IEEE Transactions on},
+  number={1},
+  pages={85--93},
+  year={1977},
+  publisher={IEEE}
 }
 
 %A streamit paper, high level description of language
