finishing touches on research proposal

--- a/hons/docs/researchpresentation.tex
+++ b/hons/docs/researchpresentation.tex
@@ -1,7 +1,7 @@
 \documentclass{beamer}
 \usepackage[latin1]{inputenc}
 \usetheme{Goettingen}
-\title[SDF Crash Course]{Fault tolerance in Synchronous Dataflow}
+\title[SDF Crash Course]{Fault Tolerance in Synchronous Dataflow}
 \author{Nic Hollingum}
 \institute{USYD}
 \date{23 May, 2011}
@@ -25,8 +25,7 @@
 \end{itemize}
 \end{column}
 \begin{column}{4cm}
-\center{\includegraphics[height=7cm]{../res/Mapreduce.jpg}}
-\caption{Marius Watz}
+\center{\includegraphics[height=4cm]{../res/Mapreduce.jpg}}
 \end{column}
 \end{columns}
 \end{frame}
@@ -34,7 +33,7 @@
 \begin{frame}{Fault Tolerance}
 \begin{columns}
 \begin{column}{4cm}
-\center{\includegraphics[height=7cm]{../res/computerfire.jpg}}
+\center{\includegraphics[height=5cm]{../res/computerfire.jpg}}
 \end{column}
 \begin{column}{6cm}
 \begin{itemize}
@@ -57,7 +56,7 @@
 \begin{frame}{So...}
 \begin{itemize}
 	\item How can we best provide fault tolerance (FT)?
-	\item How does the provision of FT affect runtim and bandwidth?
+	\item How does the provision of FT affect runtime and bandwidth?
 	\item Can tradeoffs be made using different FT Mechanisms?
 	\item What are the properties of SDF that make this easier/harder?
 	\item What assurances can be made to the users?
@@ -77,7 +76,7 @@
 \end{itemize}
 \end{column}
 \begin{column}{4cm}
-\center{\includegraphics[height=7cm]{../res/schedule.jpg}}
+\center{\includegraphics[height=4cm]{../res/schedule.jpg}}
 \end{column}
 \end{columns}
 \end{frame}
@@ -109,7 +108,7 @@
 \section{Plan}
 
 \begin{frame}{Plan}
-\center{\includegraphics[height=7cm]{../res/gantt.png}}
+\center{\includegraphics[width=10cm]{../res/gantt.png}}
 \end{frame}
 
 %-----------------------------------------------------------------------------------
