i need to commit more often, elec proj 3, stone presentation, redblue parallel assign

--- a/hons/docs/biblio.bib
+++ b/hons/docs/biblio.bib
@@ -290,6 +290,14 @@ keywords = "Adaptive software"
  address = {Washington, DC, USA},
 }
 
+%ZZ Stabler cited by Stone
+@book{sta74,
+  title={A system for interconnected processing},
+  author={Stabler, G.M.},
+  year={1974}
+}
+
+
 %costs simplification
 @article{sto77,
   title={Multiprocessor scheduling with the aid of network flow algorithms},
@@ -331,4 +339,12 @@ keywords = "Adaptive software"
   publisher={Citeseer}
 }
 
-
+%another one of Stone's references
+@inproceedings{wul72,
+ author = {Wulf, W. A. and Bell, C. G.},
+ title = {C.mmp - A Multi Miniprocessor},
+ booktitle = {AFIPS Conf. Proc., vol. 41, Part II.},
+ year = {1972},
+ publisher = {Fall Joint Comput. Conf},
+ address = {Montvale, NJ},
+}
