Time to write report for assign 2

--- a/hons/docs/stonepresentation.tex
+++ b/hons/docs/stonepresentation.tex
@@ -28,7 +28,7 @@
 	\item Use max flow/min cut to assign computational units
 	\item Some units float between processors during execution
 	\item Monitor working set to decide when to swap units
-	\item Static analysis of costs and problem to determina optimal assignment pre-execution
+	\item Static analysis of costs and problem to determine optimal assignment pre-execution
 \end{itemize}
 \end{frame}
 
